# ccminer-gostd-lite

./: Makefile.am  README.txt  algos.h  api.cpp  bench.cpp  ccminer.cpp  ccminer.vcxproj  ccminer.vcxproj.filters  configure.ac  miner.h  util.cpp
compat/: ccminer-config.h
gost/: cuda_gosthash.cu  gost.cu
res/: ccminer.rc
